--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ header .header__text {
 }
 
 h1 {
-    font-size: 72px;
-    font-weight: 900;
+    font-size: 64px;
+    font-weight: 600;
     color: #6fb7a7;
 }
 
@@ -66,9 +66,31 @@ p {
 }
 
 .btn--cv {
-    background-color: #6fb7a7 !important;
+    background-color: #6fb7a7;
 }
 
 .btn--cv:hover {
-    background-color: #437a6e !important;
+    background-color: #437a6e;
+}
+
+/* SKILLS */
+
+article {
+    background-color: #1C1924;
+}
+
+.skills_item {
+    height: 180px;
+    border: 1px solid #437a6e;
+    border-radius: 3px;
+}
+
+.item__icon {
+    height: 24px;
+    width: 24px;
+    fill:#437a6e;
+}
+
+h2, h5 {
+    color: #6fb7a7;
 }
